<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/themesName"
        android:text="@string/themes"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/themesGroup"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/theme1"
            android:text="@string/theme1"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/theme2"
            android:text="@string/theme2" />
    </RadioGroup>
</FrameLayout>